src/hcore/audio.h

HEXPORT(void) Audio_PushSound();
HEXPORT(int) Audio_Sounds_LoadSound(char *filePath);
HEXPORT(void) Audio_Sounds_FreeSound(int soundID);
HEXPORT(bool) Audio_Sounds_CheckSound(int soundID);
// - - - - - -
// mixer
// - - - - - -

typedef struct
{
	uint8 left;
	uint8 right;
	// more go here when 5/7.1 is a thing
} mixer_channel_panning;
#define AUDIO_MIXER_CHANNELS_MAX 64
HEXPORT(int) Audio_Mixer_Channels_GetNextFreeChannel();
HEXPORT(int) Audio_Mixer_Channels_SetSound(int channel, int soundID);
HEXPORT(void) Audio_Mixer_Channels_SetVolume(int channel, uint8 volume);
HEXPORT(void) Audio_Mixer_Channels_SetPanning(int channel, mixer_channel_panning panning);
HEXPORT(void) Audio_Mixer_Channels_CalcAttenuation(int channel, vector2 offsetFromListener, float maxDist);
HEXPORT(void) Audio_Mixer_Channels_Advance(int channel, bool loop);
// - - - - - -
// state snapshot
// - - - - - -

typedef struct
{
	int deviceID;
	
	audio_format format;
	int channels;
	int sampleRate;
	int sampleSize;
	
	int samplesNeeded;
	
	struct audio_sounds_state
	{
		int maxSounds;
		int soundCount;
	} sounds;
	
	struct audio_mixer_state
	{
		struct audio_mixer_channels_state
		{
			int channelCount;
			struct audio_mixer_channels_channel
			{
				int soundID;
				uint32 dataPos;
				uint32 dataLen;
				
				uint8 volume;
				mixer_channel_panning panning;
			} channels[AUDIO_MIXER_CHANNELS_MAX];
		} channels;
		
		struct audio_mixer_mix_state
		{
			int accumulatorSize;
			float stereoFalloffExp;
		} mix;
	} mixer;
} audio_state;
HEXPORT(void) Audio_GetSnapshot(audio_state *state);